--- a/vyapara1app/templates/company/creditlist.html
+++ b/vyapara1app/templates/company/creditlist.html
@@ -113,13 +113,13 @@
                         <div class="col-md-3" style="margin-left: 5vh;">
                             <div class="form-group">
                                 <label for="fromDate" style="color: black; margin-bottom: 1vh;">From Date:</label>
-                                <input type="date" class="form-control h-100 border-secondary" id="fromDate" style="color: black; background-color: white;" onclick="filterDates()"> 
+                                <input type="date" class="form-control h-100 border-secondary" id="fromDate" style="color: black; background-color: white;" onchange="filterDates()"> 
                             </div>
                         </div>
                         <div class="col-md-3">
                             <div class="form-group">
                                 <label for="toDate" style="color: black; margin-bottom: 1vh;">To Date:</label>
-                                <input type="date" class="form-control h-100 border-secondary" id="toDate" style="color: black; background-color: white;" onclick="filterDates()">
+                                <input type="date" class="form-control h-100 border-secondary" id="toDate" style="color: black; background-color: white;" onchange="filterDates()">
                             </div>
                         </div>
 
@@ -269,7 +269,7 @@
                             </button>
                             <ul class="dropdown-menu">
                               <li><a class="dropdown-item fw-bold tb hide_table_text_v" href=""><span class="fa fa-eye pe-2 tg"></span> View </a></li>
-                              <li><a class="dropdown-item fw-bold tb hide_table_text_v" href=""><span class="fa fa-edit pe-2 tj"></span> Edit</a></li>
+                              <li><a class="dropdown-item fw-bold tb hide_table_text_v" href="{% url 'edit_creditnote' c.id %}"><span class="fa fa-edit pe-2 tj"></span> Edit</a></li>
                               <li><a class="dropdown-item fw-bold tb hide_table_text_v" href=""><span class="fa fa-history pe-2 th"></span> History</a></li>
                               <li><a class="dropdown-item fw-bold tb hide_table_text_d" onclick="deletepbill('{{c.id}}')"><span class="fa fa-trash-alt tr" style="padding-inline-start: 0.1rem;padding-inline-end:0.7rem ;"></span> Delete</a></li>
                             </ul>
@@ -398,7 +398,7 @@
     </div>
 </div>
 
-<script>
+{% comment %} <script>
     $(document).ready(function() {
         var table = document.getElementById("billtable");
         var rows = table.getElementsByTagName("tr");
@@ -448,7 +448,7 @@
             });
         }
     });
-</script>
+</script> {% endcomment %}
 <script>
     function deletepbill(id)
     {
@@ -515,7 +515,7 @@
 
 
 
-<script>
+{% comment %} <script>
     var table = document.getElementById('billtable');
     var rows = table.getElementsByTagName('tr');
     for (var i = 1; i < rows.length; i++) {
@@ -541,7 +541,7 @@
             }
         });
     }
-</script>
+</script> {% endcomment %}
 
 <script>
     function cleardropdown(index){
@@ -643,23 +643,31 @@
 <script>
     function filterDates() {
         var fromDate = document.getElementById("fromDate").value;
-        console.log("From Date:", fromDate);
-
         var selectedDate = fromDate ? new Date(fromDate) : null;
 
         if (selectedDate) {
-            selectedDate.setDate(selectedDate.getDate() - 1);
+            selectedDate.setHours(0, 0, 0, 0); // Set time to midnight for accurate comparison
         }
 
-        var toDate = document.getElementById("toDate").value;
+        var toDateInput = document.getElementById("toDate"); // Add this line to define toDateInput
+        var toDate = toDateInput.value;
+        
         var table = document.getElementById("billtable");
         var rows = table.getElementsByTagName("tr");
         var emptyMessage = document.getElementById('emptyMessage');
         var isEmpty = true;
 
+        if (fromDate) {
+            toDateInput.min = fromDate;
+        } else {
+            // Reset the minimum date if "From Date" is not selected
+            toDateInput.min = "";
+        }
+
         for (var i = 1; i < rows.length; i++) {
-            var currentDate = rows[i].getElementsByTagName("td")[0].innerText;
-            var date = new Date(currentDate);
+            var currentDate = rows[i].getElementsByTagName("td")[1].innerText; // Assuming the date is in the second column (index 1)
+            var date = new Date(currentDate.replace(/(\d{2})-(\d{2})-(\d{4})/, "$2/$1/$3"));
+            date.setHours(0, 0, 0, 0);
 
             if ((fromDate && date >= selectedDate) || !fromDate) {
                 if ((toDate && date <= new Date(toDate)) || !toDate) {
@@ -676,6 +684,8 @@
         emptyMessage.style.display = isEmpty ? 'block' : 'none';
     }
 </script>
+
+
 
 
 <script>
@@ -738,6 +748,7 @@
         XLSX.writeFile(wb2, 'PurchaseBillItemModel.xlsx');
     }
 </script>
+
 
 
 
